@@ -36,7 +36,7 @@ public class TC_20901 extends BaseDriver {
         dRob.keyRelease(KeyEvent.VK_ENTER);
 
         List<WebElement> aCrit3 = driver.findElements(By.cssSelector("div[class='page-title'] h1"));
-        Assert.assertTrue("Orders couldn't be displayed!", !aCrit3.isEmpty() && aCrit3.getFirst().getText().equals("My account - Orders"));
+        Assert.assertTrue("Orders couldn't be displayed!", !aCrit3.isEmpty() && aCrit3.get(0).getText().equals("My account - Orders"));
 
         List<WebElement> aCrit4 = driver.findElements(By.xpath("//input[@type='button'][@value='Details']"));
         Assert.assertFalse("Details button not found!", aCrit4.isEmpty());
@@ -47,37 +47,30 @@ public class TC_20901 extends BaseDriver {
         Assert.assertFalse("PDF Invoice button not found!", aCrit5.isEmpty());
 
         WebElement orderNumber = driver.findElement(By.cssSelector("div[class='order-number']"));
-        String orderNumberr = orderNumber.getText().substring(7);
-
+        String orderNumberStr = orderNumber.getText().substring(7);
 
         dAct.click(driver.findElement(By.linkText("PDF Invoice"))).build().perform();
-        String mainHandle = driver.getWindowHandle();
 
         dRob.keyPress(KeyEvent.VK_CONTROL);//<--Downloads
         dRob.keyPress(KeyEvent.VK_J);
         dRob.keyRelease(KeyEvent.VK_CONTROL);
         dRob.keyRelease(KeyEvent.VK_J);
         MyFunction.Wait(1);
+        Set<String> handlesBefore = driver.getWindowHandles();
         for (int i = 0; i < 2; i++) {
             dRob.keyPress(KeyEvent.VK_TAB);
             dRob.keyRelease(KeyEvent.VK_TAB);
         }
         dRob.keyPress(KeyEvent.VK_ENTER);
         dRob.keyRelease(KeyEvent.VK_ENTER);
+        MyFunction.Wait(1);
+        Set<String> handlesAfter = driver.getWindowHandles();
+        handlesAfter.removeAll(handlesBefore);
+        Iterator<String> orderTabHandle = handlesAfter.iterator();
+        String handle = orderTabHandle.next();
+        driver.switchTo().window(handle);
+        Assert.assertTrue("Failed to download the requested invoice!", driver.getCurrentUrl().contains(orderNumberStr));
 
-        Set<String> handles = driver.getWindowHandles();
-        String download = null;
-        for (String hndl : handles) {
-            if (!hndl.equals(mainHandle)) {
-                driver.switchTo().window(hndl);
-                if (!driver.getCurrentUrl().contains("chrome://downloads")) {
-                    download = hndl;
-                }
-            }
-        }
-        driver.switchTo().window(download);
-        Assert.assertTrue("error", driver.getCurrentUrl().contains(orderNumberr));
         WaitAndClose();
-
     }
 }
